log
Fri, Mar 21, 2025 11:44:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 12:40:11 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       elemento = k;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
92b07e4
Sat, Mar 22, 2025  5:07:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7a2fd4c
Sat, Mar 22, 2025  5:16:31 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|3
total_score: 20/70
6088847
Sat, Mar 22, 2025  5:38:01 PM: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:63:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:66:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       num = next(L);
           ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:18: error: comparison between pointer and integer [-Werror]
       if (indice == elem)
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
9748e97
Sat, Mar 22, 2025  5:41:31 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
7020062
